--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-# local virtual env files
-venv/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# local env files
-.env
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
